# machine-learning

./: .gitignore
avartar/: README_tts_api_server.md  simple_tts_client.py  test_tts_api.py  tts_api_curl_commands.md
beautiful_soup/: bs_omim.py  test_bs.py
chatglm3/: model_start.py
d2l-my/: channels-my.py  conv-layer-my.py  lenet-my.py  mlp-concise-my.py  model-construction-my.py  padding-and-strides-my.py  parameters-my.py  pooling-my.py  read-write-my.py  use-gpu-my.py
data-processing/: DataSet.py
deepseek/: function_call.py
docs/: tech_doc02.md
engineering/: README.md  config.py  examples.py  requirements.txt  stream_chat.py  test_thinking.py
excel/: README.md  example_usage.py  excel_to_json.py  requirements.txt  临场换人.xlsx  临场换人_临场换人-比分.json  临场换人_临场换人.json  体能概况.xlsx  体能概况_康复训练-体能概况.json  技战术概况.xlsx  技战术概况_技战术概况.json
fastapi/: main.py  run.sh
feature/: FeaturePreprocessing.py
fifa-buddy/: fastapi.tar
helloworld/: requirements.txt  test01.ipynb
kneighbors/: FbLocation.ipynb  FbLocation.py  KNN.py  KnnFlower.py
langgraph/: .env.example  agent.py  agent_memory.py  langgraph.json  router.py  simple_graph.py
linear-model/: LinearModel.py  LinearModel2.py  LogisticRegressionModel.ipynb
little-tools/: rename_ff.py  rename_folder.py
markdown/: test1.md
mcp/: bingsearch.py  mcp-dify-settings.json  settings-demo.json
nvidia/: 01_microservices.ipynb  03_langchain_intro.ipynb  04_running_state.ipynb
poc/product-selling-points/: .gitignore  README.md  product_selling_points.py  pyproject.toml  test_qwen3_7_plus.py
sql/: gift_type.sql
(+214 files in other folders)
